fix an issue where the inspectors were not showing correctly

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,11 +44,9 @@ body {
 }
 
 #main {
-  overflow:auto;
   margin-top: 70px;
   margin-bottom: 70px;
 }
-
 
 #footer {
   position: absolute;
